# lab1-2025

./: CMakeLists.txt  README.md  lab1.md  lab1.txt
src/: blur.cpp  blur.cu  blur.cuh
